add comments and descriptions

--- a/gif_generator.ipynb
+++ b/gif_generator.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "Print progress bar in-place to track\n",
+    "Print progress bar in-place to monitor\n",
     "progress of GIF render.\n",
     "\"\"\"\n",
     "def printProgressBar (iteration, total, prefix = '', suffix = '', decimals = 0, length = 100, fill = '█'):\n",
@@ -83,14 +83,15 @@
     "    filenames = [png for png in os.listdir() if png[-4:] == \".png\"]\n",
     "    filenames.sort(key=natural_keys)\n",
     "    \n",
-    "    # Create gif and store in ./gif_files directory\n",
+    "    # Create gif name and store in ./gif_files directory\n",
     "    GIF_DIR = \"{}/gif_files\".format(BASE_DIR)\n",
     "    gif_name = input(\"Provide a name for your gif: \")\n",
     "    if gif_name[-4:] != '.gif':\n",
     "        gif_name += '.gif'\n",
     "    gif_file = \"{_dir}/{_file}\".format(_dir=GIF_DIR, _file=gif_name)\n",
-    "    with imageio.get_writer(gif_file, mode='I', duration=0.02) as writer:\n",
     "\n",
+    "    # Make gif\n",
+    "    with imageio.get_writer(gif_file, mode='I', duration=0.02) as writer:\n",
     "        for index, file in enumerate(filenames):\n",
     "            image = imageio.imread(file)\n",
     "            writer.append_data(image)\n",
