--- a/metro_mapping.ipynb
+++ b/metro_mapping.ipynb
@@ -117,7 +117,8 @@
    "source": [
     "\"\"\"\n",
     "Find lat and lon of every bus.\n",
-    "Pass in an instance of ACTransit.\n",
+    "Pass in an instance of AC Transit\n",
+    "GTFS real-time buses.\n",
     "\"\"\"\n",
     "def find_geotag(all_buses):\n",
     "    lat_list = []\n",
@@ -138,7 +139,7 @@
     "\n",
     "\n",
     "def time_sleep(t0, t1, seconds=10):\n",
-    "    # Induce 10 second wait time\n",
+    "    # Induce {second} wait time\n",
     "    time_difference = seconds - (t1 - t0)\n",
     "    if time_difference <= 0:\n",
     "        time.sleep(0)\n",
@@ -157,7 +158,7 @@
     "\n",
     "\"\"\"\n",
     "Continually export bus coordinate images\n",
-    "every 5 seconds to ./map_figs\n",
+    "every {seconds} to ./map_figs\n",
     "\"\"\"\n",
     "def main():\n",
     "    os.chdir(\"{}/map_figs\".format(BASE_DIR))\n",
@@ -166,7 +167,7 @@
     "        while True:\n",
     "            t0 = time.time()\n",
     "\n",
-    "            # Fetch all AC Transit bus information\n",
+    "            # Fetch real-time AC Transit bus information\n",
     "            try:\n",
     "                all_bus = client.gtfsrt.vehicles()\n",
     "            except TypeError:\n",
@@ -179,7 +180,7 @@
     "            t1 = time.time()\n",
     "            time_sleep(t0, t1, seconds=5)\n",
     "    \n",
-    "    # Handle abort or connection error\n",
+    "    # Handle interrupts or connection error\n",
     "    except KeyboardInterrupt:\n",
     "        print(\"Exiting protocol...\")\n",
     "    except Exception as error:\n",
